--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -26,6 +26,7 @@ save_model: True # Save the models to disk
 save_model_interval: 500000 # Save models after this many timesteps
 checkpoint_path: "" # Load a checkpoint from this path
 evaluate: False # Evaluate model for test_nepisode episodes and quit (no training)
+eval_message_dropout_rate: 0.0 # Message dropout rate during evaluation (0.0 = disabled, only affects MASIA)
 load_step: 0 # Load model trained on this many timesteps (0 if choose max possible)
 save_replay: False # Saving the replay of the model loaded from checkpoint_path
 local_results_path: "results" # Path for local results
